--- a/src/gui/styles/gui.css
+++ b/src/gui/styles/gui.css
@@ -18,6 +18,7 @@
 
 .topBar {
 	top: 0;
+	height: 6vh;
 	font-size: 4vh;
 	background-color: rgba(255, 255, 255, .75);
 }
@@ -39,6 +40,7 @@
 
 .bottomBar {
 	bottom: 0;
+	height: 4vh;
 	font-size: 2.5vh;
 	background-color: rgba(255, 255, 255, .75);
 }
