--- a/src/gui/styles/gui.css
+++ b/src/gui/styles/gui.css
@@ -15,6 +15,22 @@
 	display: flex;
 	justify-content: space-between;
 }
+.gameOver
+{
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	right: 0;
+	left: 0;
+	top: 0;
+	bottom: 0;
+	text-align: center;
+	justify-content: center;
+	align-items: center;
+	display: flex;
+	color: green;
+	font-size: 35px;
+}
 
 .topBar {
 	top: 0;
