--- a/src/gui/styles/gui.css
+++ b/src/gui/styles/gui.css
@@ -69,6 +69,7 @@
 .tree__btn, .factory__btn {
 	pointer-events: all;
 	font-size: 1em;
+	width: 100%;
 }
 
 
@@ -118,4 +119,11 @@
 .treeListItem{
 	cursor: pointer;
 	pointer-events: all;
+}
+
+
+.slotItem{
+	width: 100%;
+	flex-basis: 100%;
+	text-align: center;
 }
