--- a/src/gui/styles/gui.css
+++ b/src/gui/styles/gui.css
@@ -58,7 +58,7 @@
 	bottom: 0;
 	height: 4vh;
 	font-size: 2.5vh;
-	background-color: rgba(255, 255, 255, .75);
+	background-color: none;
 }
 
 .info {
@@ -70,6 +70,11 @@
 	pointer-events: all;
 	font-size: 1em;
 	width: 100%;
+	background: none;
+	border: none;
+	user-select: none;
+	outline: none;
+	cursor: pointer;
 }
 
 
