--- a/src/gui/styles/gui.css
+++ b/src/gui/styles/gui.css
@@ -89,7 +89,7 @@
 
 .bottomBar {
 	bottom: 0;
-	height: 4vh;
+	height: 50px;
 	font-size: 2.5vh;
 	display: flex;
 	background-color: none;
@@ -109,6 +109,7 @@
 	user-select: none;
 	outline: none;
 	cursor: pointer;
+	position: relative;
 }
 
 
@@ -165,4 +166,16 @@
 	width: 100%;
 	flex-basis: 100%;
 	text-align: center;
+}
+
+.slotEmptyImage{
+	width: 40px;
+	height: 40px;
+}
+
+.slotPlantImage{
+	position: absolute;
+	top: 7px;
+	left: 0;
+	right: 0;
 }
